scss/custom/_navbar-fullscreen.scss
/* ... */
.navbar-az-fullscreen-modal {
  --az-navbar-fullscreen-modal-footer-font: normal normal bold 18px/22px proxima-nova-condensed;
  --az-navbar-fullscreen-modal-footer-letter-spacing: .18px;
  --az-navbar-fullscreen-modal-footer-brand-font: normal normal bold 18px/22px proxima-nova-condensed;
  --az-navbar-fullscreen-modal-footer-brand-letter-spacing: .36px;
  --az-navbar-fullscreen-modal-fade-size: 56px;
  --az-navbar-fullscreen-modal-fade-color: var(--bs-blue);
  --bs-modal-bg: var(--bs-blue);
  --bs-modal-padding: 0;
  --bs-modal-header-padding: 0;
  --bs-modal-header-border-width: 0;
  --bs-modal-footer-gap: 0;
  --bs-modal-footer-bg: var(--bs-azurite);
  --bs-modal-footer-border-color: var(--bs-blue);
  --bs-modal-footer-border-width: 2px;

  .modal-header {
    flex-direction: column;
    align-items: stretch;

    @include media-breakpoint-up(lg) {
      &::after {
        position: absolute;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 1;
        height: var(--az-navbar-fullscreen-modal-fade-size);
        pointer-events: none;
        content: "";
        background: linear-gradient(to bottom, var(--az-navbar-fullscreen-modal-fade-color) 0%, rgb(0 0 0 / 0) 100%);
        transform: translateY(100%);
      }
    }

    .navbar-az-fullscreen {
      --az-navbar-fullscreen-bottom-border-width: 0;
      --bs-navbar-toggler-icon-bg: var(--az-navbar-fullscreen-toggler-icon-close);
    }
  }

  .modal-content {
    display: flex;
    flex-direction: column;
    height: 100dvh;
    min-height: 0;
  }

  .modal-header,
  .modal-footer {
    position: relative;
    z-index: 3;
    flex: 0 0 auto;
  }

  .modal-body {
    position: relative;
    z-index: 1;
    display: flex; // this is important apparently!
    flex: 1 1 auto;
    min-height: 0;
    overflow: hidden;
  }

  .navbar-az-fullscreen-search {
    --az-navbar-fullscreen-search-color: var(--bs-cool-gray);
    max-width: none;
  }

  .modal-content > .modal-footer:not(.modal-footer ~ .modal-footer) {
    @include media-breakpoint-up(lg) {
      &::before {
        position: absolute;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1;
        height: var(--az-navbar-fullscreen-modal-fade-size);
        pointer-events: none;
        content: "";
        background: linear-gradient(to bottom, rgb(0 0 0 / 0) 0%, var(--az-navbar-fullscreen-modal-fade-color) 100%);
        transform: translateY(-100%);
      }
    }
  }

  .modal-footer {

    .navbar {
      --bs-navbar-color: var(--bs-sky);
      --bs-navbar-hover-color: var(--bs-sky);
      --bs-navbar-active-color: var(--bs-sky);
      --bs-navbar-brand-margin-end: 0;
      --bs-navbar-brand-color: var(--bs-white);
      --bs-navbar-brand-hover-color: var(--bs-white);
      width: 100%;
      font: var(--az-navbar-fullscreen-modal-footer-font);
      letter-spacing: var(--az-navbar-fullscreen-modal-footer-letter-spacing);
      border-top: 0;
      border-bottom: 0;
    }

    .navbar-brand {
      margin: 0 15px 0 0;
      font: var(--az-navbar-fullscreen-modal-footer-brand-font);
      letter-spacing: var(--az-navbar-fullscreen-modal-footer-brand-letter-spacing);
    }

    .navbar-az-fullscreen-modal-footer-scroll {
      flex: 1 1 auto;
      min-width: 0;
      overflow-x: auto;
      overflow-y: hidden;
      scrollbar-gutter: stable;
    }

    .navbar-nav {
      --bs-nav-link-padding-x: 15px;
      --bs-nav-link-padding-y: 30px;
      --bs-nav-link-color: var(--bs-navbar-color);
      --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
      flex-direction: row;
      flex-wrap: nowrap;
      align-items: center;
    }

    .nav-item {
      &:hover {
        background-color: transparent;
      }

      &:has(> .nav-link.active),
      &:has(> .nav-link.is-active),
      &:has(> .nav-link:active),
      &:has(> .nav-link.show) {
        background-color: transparent;
      }
    }

    .nav-link {
      padding-top: var(--bs-nav-link-padding-y);
      padding-bottom: var(--bs-nav-link-padding-y);
      white-space: nowrap;

      &:active,
      &.active,
      &.is-active {
        color: var(--bs-navbar-active-color);
        background-color: transparent;
      }
    }

    .nav-link-text {
      position: relative;
      &:hover {
        &::after {
          opacity: 1;
          transform: scaleX(1);
        }
      }

      &::after {
        position: absolute;
        right: 0;
        bottom: 0;
        left: 0;
        height: 1px;
        content: "";
        background: var(--bs-sky);
        opacity: 0;
        transform: scaleX(0);
        transform-origin: left;
        @include border-radius(999px);
        @include transition(opacity .3s ease-out, transform .3s ease-out);
      }
    }
  }
}
/* ... */

